# RNN_From_Scratch

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/: scraped_articles.json  wikipedia_scraping.ipynb
docs/: batches_understanding.md
src/: RNN.py  main.ipynb
utils/: files.py
